# GEDAI-PIBITI

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/: projects.py  weights.py
app/core/: config.py  methods.py  models.py
app/db/: database.py
app/models/: weight_input.py
app/schemas/: alternative.py  criterion.py  evaluation.py  weight.py
tests/: test.json
