[project]
name = "GEDAI-DecisionHelperAPI"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "fastapi-users[sqlalchemy]>=14.0.1",
    "pydantic-settings>=2.10.1",
    "pydecision>=4.7.7",
    "sqlalchemy[ascyncio]>=2.0.41",
    "uvicorn>=0.35.0",
]
